# Adaptive-Bloom-filter

./: README.md
ABF_Remote_git/: CMakeLists.txt  main.cpp
ABF_Remote_git/Be_Tree_files/: backing_store.cpp  betree.hpp  swap_space.cpp  swap_space.hpp  test.cpp
ABF_Remote_git/New_BF/General_BF/: GeneralBF.cpp  GeneralBF.h
ABF_Remote_git/New_BF/Grey_Box_Function_Dir/: GreyBoxFunction.h
ABF_Remote_git/New_BF/Hash_files/: Hash.cpp  Hash.h
ABF_Remote_git/New_BF/Remote/: Remote.h
ABF_Remote_git/New_BF/V_tests/: tests.cpp  tests.h
ABF_Remote_git/New_BF/Wrapper/: Wrapper.cpp  Wrapper.h
AdaptiveBF/: BloomFilter.cpp  BloomFilter.h  GlobalFunction.cpp  GlobalFunction.h  Hash.cpp  Hash.h  Helper.cpp  Helper.h  SetTable.cpp  SetTable.h  main.cpp
AdaptiveBF(2)/: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  GreyBoxFunction.cpp  GreyBoxFunction.h  Hash.cpp  Hash.h  Helper.cpp  Helper.h  SetTable.cpp  SetTable.h  main.cpp
AdaptiveBF(2)/Non_Adaptive/: NonAdaptiveBloomFilter.cpp  NonAdaptiveBloomFilter.h  NonAdaptiveHelper.cpp  NonAdaptiveHelper.h
AdaptiveBF(2)/tests/: testers.cpp  testers.h
AdaptiveBF/Non_Adaptive/: NonAdaptiveBloomFilter.cpp  NonAdaptiveBloomFilter.h  NonAdaptiveHelper.cpp  NonAdaptiveHelper.h
AdaptiveBF/tests/: testers.cpp  testers.h
AdaptiveQF-git/: AdaptQF.cpp  AdaptQF.h  CMakeLists.txt  Filter.cpp  Filter.h  Helper.cpp  Helper.h  PackedArray.cpp  PackedArray.h  RegularQF.cpp  RegularQF.h  globalFunction.cpp  globalFunction.h  main.cpp
AdaptiveQF-git/Hash/: Hash.cpp  Hash.h
AdaptiveQF-git/VariableLengthFingerPrint/: RegularVLQF.cpp  RegularVLQF.h  VLHelper.cpp  VLHelper.h  VLQF.cpp  VLQF.h  VLTests.cpp  VLTests.h
AdaptiveQF-git/analyze/: temp1  temp2
AdaptiveQF-git/tests/: Tests.cpp  Tests.h  paTests.cpp  paTests.h
QF_git/QF/: Basic_Tests.py  BitArray.py  CQF.py  Element.py  Hash.py  README  Tests.py  __init__.py
git_clean_code/: CMakeLists.txt  main.cpp
git_clean_code/GlobalFunctions/: globalFunction.h
git_clean_code/Hash/: Hash.cpp  Hash.h
git_clean_code/QuotientFilter/: BasicFilter.cpp  BasicFilter.h  BitArray.h  DB.cpp  DB.h  Filter.cpp  Filter.h
git_clean_code/Tests/: DBtests.cpp  DBtests.h
